# roboteq_control

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml
cfg/: RoboteqAnalogInput.cfg  RoboteqController.cfg  RoboteqEncoder.cfg  RoboteqLimits.cfg  RoboteqPID.cfg  RoboteqPIDtype.cfg  RoboteqParameter.cfg  RoboteqPulseInput.cfg
config/: roboteq.yaml
docs/: armadillo2_28_2_18_roborun_prof.xml
include/configurator/: gpio_analog.h  gpio_encoder.h  gpio_pulse.h  gpio_sensor.h  motor_param.h  motor_pid.h
include/roboteq/: motor.h  roboteq.h  serial_controller.h
launch/: differential_drive.launch  roboteq.launch  test.launch
mbs/: script.hex  script.mbs
msg/: ControlStatus.msg  MotorStatus.msg  Peripheral.msg
rviz/: urdf.rviz
src/: roboteq_control.cpp
src/configurator/: gpio_analog.cpp  gpio_encoder.cpp  gpio_pulse.cpp  motor_param.cpp  motor_pid.cpp
src/roboteq/: motor.cpp  roboteq.cpp  serial_controller.cpp
srv/: Service.srv
urdf/: differential-robot.urdf.xacro
