<?xml version="1.0"?>
<package format="2">
  <name>roboteq_control</name>
  <version>0.0.2</version>
  <description>The roboteq_control package connect all type of Roboteq boards in ROS using the ros control</description>

    <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
    <license>BSD</license>
    <url type="website">http://rnext.it/project/roboteq</url>
    <author email="raffaello@rnext.it">Raffaello Bonghi</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>serial</depend>
    <depend>controller_manager</depend>
    <depend>diagnostic_updater</depend>
    <depend>diagnostic_msgs</depend>
    <depend>roscpp</depend>
    <depend>joint_limits_interface</depend>
    <depend>hardware_interface</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>sensor_msgs</depend>
    <depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <build_depend>urdf</build_depend>
  
    <exec_depend>diagnostic_aggregator</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>diff_drive_controller</exec_depend>
    <exec_depend>topic_tools</exec_depend>

</package>
